# spleeter

./: pyproject.toml
spleeter/model/provider/: github.py
