[project]
name = "spleeter"
version = "2.4.2"
description = "The Deezer source separation library with pretrained models based on tensorflow."
authors = [{ name = "Deezer Research", email = "spleeter@deezer.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8,<3.12"

classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "ffmpeg-python>=0.2.0,<1.0.0",
    "httpx[http2]>=0.19.0,<1.0.0",
    "typer>=0.3.2,<1.0.0",
    "tensorflow-io-gcs-filesystem==0.37.1",
    "tensorflow-macos==2.13.0",
    "tensorflow-metal==1.0.0",
    "pandas>=1.3.0,<2.0.0",
    "norbert>=0.2.1,<1.0.0",
    "numpy<2.0.0"
]

[project.optional-dependencies]
evaluation = ["musdb>=0.4.0", "museval>=0.4.0"]

[project.scripts]
spleeter = "spleeter.__main__:entrypoint"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["spleeter*"]

[tool.setuptools.package-data]
"spleeter.resources" = ["*.json"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
